fixed alert message text not setting, center aligned the message text

--- a/MapWaypoints/css/style.css
+++ b/MapWaypoints/css/style.css
@@ -28,6 +28,7 @@ body {
 }
 #alertMsg {
   min-height: 50px;
+  align-content: center;
 }
 #alertButtons {
   display: flex;
